# vorta

./: .pre-commit-config.yaml  borgsqldump.sql  pyproject.toml  setup.cfg
src/vorta/: utils.py
src/vorta/assets/UI/: scheduletab.ui
src/vorta/keyring/: darwin.py
src/vorta/views/: archive_tab.py  schedule_tab.py
